# lta-phone-price-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.py
notebooks/: 0 etl.ipynb  1 idea.ipynb  2 ml.ipynb  phone-price.parquet  phone_specs.parquet  phones-id-price.parquet  phones-report.parquet  play.ipynb
src/: config.py  handlers.py  phoner.py  schemas.py
src/data/: phone-price.parquet
src/docs/: ml_architecture.mermaid  system_design.mermaid
src/llm/: utils.py
src/ml/: __init__.py  _dataset.py  _ml.py  _stats.py
src/ml/models/: model_info.pkl  phone_price_model_budget.pkl  phone_price_model_mid_range.pkl  phone_price_model_premium.pkl
src/parsing/: __init__.py  _parsers.py
