[project]
name = "phoner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb-engine>=0.17.0",
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "jupysql>=0.11.1",
    "markitdown[all]>=0.1.2",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
